--- a/helm/charts/o11y-service/templates/configmap-es.yaml
+++ b/helm/charts/o11y-service/templates/configmap-es.yaml
@@ -4,10 +4,10 @@ metadata:
   annotations:
     use-subpath: "true"
   labels:
-    {{- include "flogoprovisioner.labels" . | nindent 4 }}
-  name: {{ include "flogoprovisioner.fullname" . }}-serviceconfig
+    {{- include "o11y-service.labels" . | nindent 4 }}
+  name: {{ include "o11y-service.fullname" . }}-es
 data:
-  {{- range $filename, $content :=  .Values.config }}
+  {{- range $filename, $content :=  .Values.config.es }}
   {{- if $content }}
   {{ $filename }}: {{ tpl $content $ | quote }}
   {{- end }}
