--- a/helm/charts/o11y-service/values.yaml
+++ b/helm/charts/o11y-service/values.yaml
@@ -117,9 +117,31 @@ extraInitContainers: []
 #   command: ['echo', "hey"]
 
 config:
-  #  DP_INTERNAL_URL: "test.tci-env.ap-southeast-2.tcie.pro"
-  DP_INTERNAL_URL: "***NOT AVAILABLE***"
-  EFS_ROOT: "/data"
+  es:
+    LOGSERVER_HOST: ""
+    LOGSERVER_USERNAME: ""
+
 
 image:
   pullPolicy: IfNotPresent
+
+ingress:
+  # -- Enables configuration of ingress to expose o11y-service. Requires ingress support in the Kubernetes cluster.
+  enabled: false
+  hostsOverride: false
+  className: haproxy
+  hosts:
+    - host: ""
+      paths:
+        - path: /
+          pathType: Prefix
+  # -- Annotations for the ingress object. See documentation for your ingress controller for valid annotations.
+  annotations: {}
+  tls: []
+  #  - secretName: chart-example-tls
+  #    hosts:
+  #      - chart-example.local
+
+secret:
+  es:
+    LOGSERVER_PASSWORD: ""
