--- a/helm/charts/o11y-service/templates/serviceaccount.yaml
+++ b/helm/charts/o11y-service/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "bwprovisioner.serviceAccountName" . }}
+  name: {{ include "o11y-service.serviceAccountName" . }}
   labels:
-    {{- include "bwprovisioner.labels" . | nindent 4 }}
+    {{- include "o11y-service.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
