--- a/helm/charts/bwprovisioner/templates/rbac.yaml
+++ b/helm/charts/bwprovisioner/templates/rbac.yaml
@@ -28,6 +28,12 @@ rules:
   - apiGroups: [""]
     resources: ["services"]
     verbs: ["get","list","watch","create","delete","patch","update"]
+  - apiGroups: [""]
+    resources: ["ingresses"]
+    verbs: ["get","list","watch","create","delete","patch","update"]
+  - apiGroups: [""]
+    resources: ["endpoints"]
+    verbs: ["get","list","watch","create","delete","patch","update"]    
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
