--- a/helm/charts/o11y-service/templates/configmap.yaml
+++ b/helm/charts/o11y-service/templates/configmap.yaml
@@ -7,4 +7,14 @@ metadata:
     {{- include "o11y-service.labels" . | nindent 4 }}
   name: {{ include "o11y-service.fullname" . }}
 data:
-  test: "val"
+  otel-recvservice-name: {{ .Values.config.otel.receiver.service.name }}
+  otel-recvservice-port: {{ .Values.config.otel.receiver.service.port }}
+  logserver-logIndex: {{ .Values.config.logserver.logIndex }}
+  logserver-traceIndex: {{ .Values.config.logserver.traceIndex }}
+  logserver-proxy-endpoint: {{ .Values.config.logserver.proxy.endpoint }}
+  logserver-proxy-userName: {{ .Values.config.logserver.proxy.userName }}
+  logserver-exporter-endpoint: {{ .Values.config.logserver.exporter.endpoint }}
+  logserver-exporter-userName: {{ .Values.config.logserver.exporter.userName }}
+  promserver-proxy-endpoint: {{ .Values.config.promserver.proxy.endpoint }}
+  promserver-proxy-userName: {{ .Values.config.promserver.proxy.userName }}
+  promserver-exporter-endpoint: {{ .Values.config.promserver.exporter.endpoint }}
