add dummy pwds for o11y/secrets

--- a/helm/charts/o11y-service/values.yaml
+++ b/helm/charts/o11y-service/values.yaml
@@ -160,10 +160,10 @@ config:
 secret:
   logserver:
     proxy:
-      password: ""
+      password: "logserver_proxy_dummy"
   promserver:
     proxy:
-      password: ""
+      password: "promserver_proxy_dummy"
     exporter:
-      token: ""
+      token: "promserver_exporter_dummy"
 
