update o11y port data format

--- a/helm/charts/o11y-service/values.yaml
+++ b/helm/charts/o11y-service/values.yaml
@@ -141,7 +141,7 @@ config:
     receiver:
       service:
         name: "opentelemetry-operator"
-        port: "8080"
+        port: 8080
   logserver:
     logIndex: ""
     traceIndex: ""
