update HOST in otel conf

--- a/helm/charts/artifactmanager/config/otel/output-otel.conf
+++ b/helm/charts/artifactmanager/config/otel/output-otel.conf
@@ -1,7 +1,7 @@
 [OUTPUT]
     Name  opentelemetry
     Match app.*
-    Host  otel-app-collector-opentelemetry-collector
+    Host  otel-userapp
     Port  4318
     Log_response_payload True
     Tls                  Off
