update namespace and storageclassname values

--- a/helm/charts/apiserver/values.yaml
+++ b/helm/charts/apiserver/values.yaml
@@ -10,6 +10,7 @@ global:
   cp:
     dataplaneId: dp-dp1
     instanceId: defaultinstid
+    namespace: tp-dp-dp1
   apiserver:
     serviceAccount: ""
     data:
