--- a/helm/charts/flogoprovisioner/values.yaml
+++ b/helm/charts/flogoprovisioner/values.yaml
@@ -11,6 +11,7 @@ global:
   cp:
     dataplaneId: dp-dp1
     instanceId: defaultinstid
+    namespace: tp-dp-dp1
   flogoprovisioner:
     serviceAccount: ""
     data:
