fix service account

--- a/helm/charts/o11y-service/templates/serviceaccount.yaml
+++ b/helm/charts/o11y-service/templates/serviceaccount.yaml
@@ -1,8 +1,8 @@
-{{- if eq .Values.global.o11yservice.serviceAccount "" }}
+{{- if .Values.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "o11y-service.sa" . }}
+  name: {{ include "o11y-service.serviceAccountName" . }}
   labels:
     {{- include "o11y-service.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
