--- a/helm/charts/o11y-service/templates/serviceaccount.yaml
+++ b/helm/charts/o11y-service/templates/serviceaccount.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "o11y-service.serviceAccountName" . }}
+  name: {{ include "o11y-service.fullname" . }}
   labels:
     {{- include "o11y-service.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
