--- a/helm/charts/bwprovisioner/templates/rbac.yaml
+++ b/helm/charts/bwprovisioner/templates/rbac.yaml
@@ -28,7 +28,7 @@ rules:
   - apiGroups: [""]
     resources: ["services"]
     verbs: ["get","list","watch","create","delete","patch","update"]
-  - apiGroups: [""]
+  - apiGroups: ["networking.k8s.io"]
     resources: ["ingresses"]
     verbs: ["get","list","watch","create","delete","patch","update"] 
 ---
