--- a/helm/charts/o11y-service/templates/secrets.yaml
+++ b/helm/charts/o11y-service/templates/secrets.yaml
@@ -8,6 +8,9 @@ metadata:
     "helm.sh/resource-policy": "keep"
 type: Opaque
 data:
-  logserver-proxy-password: {{ default "" .Values.secret.logserver.proxy.password | b64enc | quote }}
+  logserver-app-proxy-password: {{ default "" .Values.secret.logserver.userapp.proxy.password | b64enc | quote }}
+  logserver-app-expo-password: {{ default "" .Values.secret.logserver.userapp.exporter.password | b64enc | quote }}
+  logserver-svc-expo-password: {{ default "" .Values.secret.logserver.services.exporter.password | b64enc | quote }}
   promserver-proxy-password: {{ default "" .Values.secret.promserver.proxy.password | b64enc | quote }}
   promserver-exporter-token: {{ default "" .Values.secret.promserver.exporter.token | b64enc | quote }}
+  jaeger-es-username: {{ default "" .Values.secret.jaeger.es.password | b64enc | quote }}
