--- a/helm/charts/o11y-service/templates/configmap.yaml
+++ b/helm/charts/o11y-service/templates/configmap.yaml
@@ -9,12 +9,17 @@ metadata:
 data:
   otel-recvservice-name: {{ .Values.config.otel.receiver.service.name }}
   otel-recvservice-port: {{ quote .Values.config.otel.receiver.service.port }}
-  logserver-logIndex: {{ .Values.config.logserver.logIndex }}
-  logserver-traceIndex: {{ .Values.config.logserver.traceIndex }}
-  logserver-proxy-endpoint: {{ .Values.config.logserver.proxy.endpoint }}
-  logserver-proxy-userName: {{ .Values.config.logserver.proxy.userName }}
-  logserver-exporter-endpoint: {{ .Values.config.logserver.exporter.endpoint }}
-  logserver-exporter-userName: {{ .Values.config.logserver.exporter.userName }}
+  logserver-app-logIndex: {{ .Values.config.logserver.userapp.logindex }}
+  logserver-app-traceIndex: {{ .Values.config.logserver.userapp.traceindex }}
+  logserver-svc-logIndex: {{ .Values.config.logserver.services.logindex }}
+  logserver-proxy-app-endpoint: {{ .Values.config.logserver.proxy.userapp.logindex.endpoint }}
+  logserver-proxy-app-userName: {{ .Values.config.logserver.proxy.userapp.logindex.username }}
+  logserver-exporter-app-endpoint: {{ .Values.config.logserver.exporter.userapp.logindex.endpoint }}
+  logserver-exporter-app-userName: {{ .Values.config.logserver.exporter.userapp.logindex.userName }}
+  logserver-exporter-svc-endpoint: {{ .Values.config.logserver.exporter.services.logindex.endpoint }}
+  logserver-exporter-svc-userName: {{ .Values.config.logserver.exporter.services.logindex.userName }}
   promserver-proxy-endpoint: {{ .Values.config.promserver.proxy.endpoint }}
   promserver-proxy-userName: {{ .Values.config.promserver.proxy.userName }}
-  promserver-exporter-endpoint: {{ .Values.config.promserver.exporter.endpoint }}
+  jaeger-es-host: {{ .Values.config.jaeger.es.host }}
+  jaeger-es-port: {{ quote .Values.config.jaeger.es.port }}
+  jaeger-es-username: {{ .Values.config.jaeger.es.username }}
