--- a/helm/charts/bwprovisioner/values.yaml
+++ b/helm/charts/bwprovisioner/values.yaml
@@ -11,6 +11,14 @@ global:
   cp:
     dataplaneId: dp-dp1
     instanceId: defaultinstid
+    containerRegistry:
+      secret: ""
+      url: reldocker.tibco.com
+    environmentType: ""
+    resources:
+      serviceaccount:
+        nameSpace: ""
+        serviceAccountName: ""
   bwprovisioner:
     serviceAccount: ""
     data:
@@ -25,10 +33,10 @@ global:
         tag: ""
         resources: {}
     logging:
+      enabled: false
       image:
-        enabled: false
-        registry: ""
-        tag: ""
+        registry: "cr.fluentbit.io/fluent/"
+        tag: "2.1.6"
         resources: {}
 
 replicaCount: 1
@@ -71,6 +79,11 @@ service:
   port: 7814
   targetPort: 7814
 
+publicApiService:
+  type: ClusterIP
+  port: 7816
+  targetPort: 7816
+
 #ingress:
 #  enabled: false
 #  annotations: {}
@@ -86,7 +99,7 @@ service:
 
 ingress:
   # -- Enables configuration of ingress to expose bwprovisioner. Requires ingress support in the Kubernetes cluster.
-  enabled: false
+  enabled: true
   hostsOverride: false
   className: haproxy
   hosts:
@@ -95,7 +108,13 @@ ingress:
         - path: /
           pathType: Prefix
   # -- Annotations for the ingress object. See documentation for your ingress controller for valid annotations.
-  annotations: {}
+  annotations:
+    ingress.kubernetes.io/rewrite-target: /
+    haproxy.org/cors-enable: "true"
+    haproxy.org/load-balance: leastconn
+    haproxy.org/src-ip-header: X-Real-IP
+    haproxy.org/timeout-http-request: 600s
+
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
@@ -176,3 +195,32 @@ config:
   DP_INTERNAL_URL: "***NOT AVAILABLE***"
   ARTIFACT_MANAGER_PORT: "7813"
   APP_INIT_IMAGE_TAG: "13"
+
+oauth2proxy:
+  ingress:
+    enabled: false
+    className: nginx
+    hosts:
+      - host: "test.tci-env.ap-southeast-2.tcie.pro"
+        paths:
+          - path: /oauth2
+            pathType: Prefix
+            backend:
+              service:
+                name: oauth2-proxy
+                port:
+                  number: 80
+      # -- Annotations for the ingress object. See documentation for your ingress controller for valid annotations.
+    annotations: {}
+    tls: []
+      #  - secretName: chart-example-tls
+      #    hosts:
+      #      - chart-example.local
+
+publicApi:
+  ingress:
+    controllerName: nginx
+    nginx:
+      className: nginx
+      pathPrefix: /tibco/bw
+      fqdn: bwce.dp-bwdev.tcie.pro
